[package]
name = "elikar_egui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xecs = "0.4"
elikar = "0.1.2"
crossbeam = "0.8"
egui = "0.16"
egui_wgpu_backend = "0.16"
futures = "0.3"
wgpu = "0.12"

