[package]
name = "elikar_egui"
version = "0.1.1"
edition = "2021"
license = "MIT"
description = "egui for elikar"
readme = "README.md"
repository = "https://github.com/xstater/elikar_egui/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xecs = "0.5"
elikar = "0.1"
crossbeam = "0.8"
egui = "0.16"
egui_wgpu_backend = "0.16"
futures = "0.3"
wgpu = "0.12"
parking_lot = "0.12"

